styles/styles.css
@import url('https://fonts.googleapis.com/css?family=Raleway');
@import url('https://fonts.googleapis.com/css?family=Oswald');
@import url('https://fonts.googleapis.com/css?family=Gaegu');
/* Style sheet for index.html */
/* Should we use this selector? */
* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

article,aside,details,figcaption,figure,
footer,header,hgroup,menu,nav,section {
   display:block;
}

html, body {
  height: 100%;
}

body {
  min-height: 100%;
  /*linear gradient for illusion of sea color*/

}

.intro {
  height: 800px;
  width: 100%;
  background-image: url("../content/ocean.jpg");
  background-size: cover;
}

.inner {
  padding: 20px 5%;
}

header {
  text-align: center;
  width: 100%;
}

nav li {
  display: inline;
  list-style: none;
  margin-right: 30px;
  font-family: Raleway;
  font-weight: bolder;
  font-size: 22px;
}

nav li a:visited {
  color: #000000;
}

nav li a {
  text-decoration: none;
  color: #000000;
  padding: 0 7px;
}

nav li a:hover {
  color: #1757de;
}

.content {
  text-align: center;
  height: 30%;
}

.content h1 {
  margin-left: auto;
  margin-right: auto;
  /*margin-top: 515px;*/
  font-size: 60px;
  font-family: Oswald;
  color: #f2f2f2;
  border: 5px solid #f2f2f2;
  box-sizing: border-box;
  border-radius: 20px;
  width: 600px;
  padding-bottom: 10px;
}

.title {
  margin-top: 500px;
}

.page_content {
  line-height: 28px;
  font-size: 18px;
  font-family: Raleway;
  max-width: 1020px;
  min-width: 500px;
  width: 80%;
  padding: 50px 20px;
  top: 10%;
  position: relative;
  z-index: 1;
}

.page_middle {
  margin-left: auto;
  margin-right: auto;
}

.page_offset {
  margin-left: auto;
  margin-right: auto;
  left: 80px;
}

header nav {
  padding-top: 5px;
}



/**
 * PLace holder stuff

.slide_button {
  font-size: 32px;
  font-family: Gaegu;
  background: none;
  border: none;
  padding: 3px;
}

#current_img {
  height: 400px;
  position: relative;
  text-align: center;
  margin-bottom: 20px;
  margin-top: 50px;
}

#slide_button_wrapper {
  position: relative;
  text-align: center;
  margin-bottom: 20px;
}

#lorem {
  float: left;
  width: 62%;
  padding-right: 50px;
}

#img_placeholder {
  float: left;
}

#img_placeholder img {
  width: 200px;
  height: 200px;
}

#shark_article {
  float: left;
  margin-bottom: 50px;
}



.clear_line {
  clear: both;
  margin-top: 50px;
  margin-bottom: 20px;
}

*/

.column {
  float: left;
  width: 30%;
  margin: 10px 10px 20px 10px;
}

footer {
  background-color: blue;
  background-color: rgba(10, 89, 136, 0.85);
  clear: both;
  color: white;
  margin-top: 50px;
  padding-bottom: 30px;
  padding-top: 30px;
  text-align: center;
}

.default_tabs {
  /*Gradients*/
  /*background: linear-gradient(141deg, #0fb8ad 0%, #1fc8db 51%, #2cb5e8 75%);*/
  /*background: linear-gradient(to bottom right, #0f9dbe, #163db9);*/
  box-shadow: 0 1px 8px rgba(51,51,51,0.1);
  overflow: hidden;
  background-color: #ffffff;
  position: fixed; /* Set the navbar to fixed position */
  top: 0; /* Position the navbar at the top of the page */
  width: 100%;
  z-index: 2;
}

.default_title {
  float: left
}

.default_title a {
  font-family: Raleway;
  color: #1757de;
  text-decoration: none;
}

.selected_title {
  padding-bottom: 30px;
}

.bubble {
  padding-bottom: 25px;
}

.bubble figure {
  text-align: center;
}

.bubble p {
  text-align: justify;
}

.img_bubble_3 {
  width: 33.33%;
}

.img_bubble {
  display: inline;
  padding-left: 30px;
}

.img_bubble img {
  padding-top: 15px;
}

.img_bubble_2 {
  width: 50%;
}

.images_container {
  width: 100%;
  margin-top: 20px;
  margin-bottom: 40px;
  text-align: center;
}

div.clear_both p {
  width: 60%;
}

.img_right {
  float: right;
}

.clear_both {
  clear: both;
}

.first_img_left {
  margin-left: 20%;
}

.img_wide {
  width: 100%;
  position: absolute;
  left: 0;
  height: 90%;
  min-height: 600px;
  min-width: 800px;
  margin-bottom: 150px;
  margin-top: 30px;
}

.sidenav {
  height: 100%; /* Full-height: remove this if you want "auto" height */
  width: 160px; /* Set the width of the sidebar */
  position: fixed; /* Fixed Sidebar (stay in place on scroll) */
  z-index: 0; /* Stay on top */
  top: 8%; /* Stay at the top */
  left: 0;
  overflow-x: hidden; /* Disable horizontal scroll */
  padding-top: 40px;
  box-shadow: 0 10px 8px rgba(51, 51, 51, 0.37);

}

.sidenav a {
    padding: 6px 8px 6px 16px;
    text-decoration: none;
    font-size: 20px;
    color: #000000;
    display: block;
    font-family: Raleway;
}

/* When you mouse over the navigation links, change their color */
.sidenav a:hover {
    color: #1757de;
}

/* On smaller screens, where height is less than 450px, change the style of the sidebar (less padding and a smaller font size) */
@media screen and (max-height: 450px) {
    .sidenav {padding-top: 15px;}
    .sidenav a {font-size: 18px;}
}

.bubble ul {
  padding-top: 10px;
  padding-left: 50px;
}

.bubble h3 {
  padding-bottom: 10px;
}

.animal_name {
  font-weight: bold;
}

.news_box {
  /*TODO*/
}

figcaption {
  font-size: 14px;
  text-align: center;
}

